# parlay

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
config/: bookmakers.json  runtime.toml
docs/: README.md  backtest-prep.md  contracts.md  credits.md  deep-clean-summary.md  im5-default-policy-decision-2026-02-14.md  integration-evidence-2026-02-14.md  issue-P0-lake-boundary-and-report-separation.md  nba-data-schemas.md  nba-data.md  plan-deep-clean.md  plan-dk-top5-engineering.md  plan-dk-top5-non-technical.md  plan-nba-data-mega.md  plan-odds-api.md  plan-sota-roadmap.md  plan-strategy-plugins.md  plan.md  real-run-checklist.md  runbook.md  scheduled-flow.md  sources.md  strat-odds-api-integration.md  track-stage2-pricing-fixed-point.md  track-stage8-eval-scoreboard.md
tests/: test_backtest.py  test_backtest_summary.py  test_bookmakers_config.py  test_brief_builder.py  test_calibration_map.py  test_cli_characterization.py  test_cli_data_datasets.py  test_cli_data_export_denorm.py  test_cli_data_guardrails.py  test_cli_data_migrate_layout.py  test_cli_data_repair_derived.py  test_cli_data_status.py  test_cli_data_verify.py  test_cli_probabilistic_profile.py  test_cli_runtime_config.py  test_cli_smoke.py  test_cli_snapshot_tools.py  test_cli_strategy_abalation.py  test_cli_strategy_ablation.py  test_cli_strategy_backtest_summarize.py  test_cli_strategy_health.py  test_cli_strategy_run.py  test_cli_strategy_settle.py  test_context_health.py  test_context_sources.py  test_eval_scoreboard.py  (+51 more)
(+216 files in other folders)
